fix: align code

--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@
 }
 
 body {
-  height: 100%;  
+  height: 100%;
   font-family: 'Inter', sans-serif;
   /* font-family: 'Playfair Display', serif; */
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.6rem; /*16*/
+  font-size: 1.6rem;
+  /*16*/
   font-weight: 400;
-  line-height: 1,5;
+  line-height: 1, 5;
   color: #000;
 }
 
@@ -65,7 +66,7 @@ li {
 .header {
   position: relative;
   display: flex;
-  align-items: center;  
+  align-items: center;
   width: 100%;
   min-height: 50px;
   margin-left: 0;
@@ -82,7 +83,7 @@ li {
   .header {
     box-shadow: none;
   }
-} 
+}
 
 .header-container {
   display: flex;
@@ -103,7 +104,7 @@ li {
 @media (max-width: 1200px) {
   .header-item:not(:last-child) {
     margin: 0 30px 0 0;
-  } 
+  }
 }
 
 .header-link {
@@ -116,7 +117,7 @@ li {
   background-image: linear-gradient(#000000e0, #d3184d);
   background-size: 100%;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
+  -webkit-text-fill-color: transparent;
 }
 
 /* --------------MAIN------------ */
@@ -138,6 +139,7 @@ li {
     flex-direction: column;
   }
 }
+
 p {
   font-size: 1.6rem;
   text-align: justify;
@@ -180,13 +182,13 @@ p {
   margin: 30px auto 15px 100px;
   font-family: 'Inter', sans-serif;
   font-weight: 200;
-  font-size: 4.5rem;    
+  font-size: 4.5rem;
   text-transform: uppercase;
   background-image: linear-gradient(#f3ec78, #af4261);
   background-size: 100%;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
-  text-indent: 20%; 
+  -webkit-text-fill-color: transparent;
+  text-indent: 20%;
 }
 
 @media (max-width: 1200px) {
@@ -199,6 +201,7 @@ p {
   .heading {
     margin: 30px 0 15px 0;
   }
+
   .sidebar-heading {
     display: flex;
     flex-direction: column;
@@ -209,7 +212,7 @@ p {
 
 @media (max-width: 768px) {
   .heading {
-    min-width:150px;
+    min-width: 150px;
     max-width: 490px;
     margin: 10px 0;
     text-align: center;
@@ -245,7 +248,8 @@ p {
   max-width: 100%;
 }
 
-#profile , #contacts {
+#profile,
+#contacts {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -299,17 +303,17 @@ p {
     margin-top: 35px;
     padding-left: 55px;
   }
+}
+
+@media (max-width: 990px) {
+  .content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+    margin-left: 5px;
   }
-  
-  @media (max-width: 990px) {
-    .content-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-left: 0;
-      margin-left: 5px;
-    }
-  }
+}
 
 .content-line {
   display: flex;
@@ -327,11 +331,12 @@ p {
 .line-4 {
   width: 45%;
   height: 1px;
-  background-color: #000; 
+  background-color: #000;
 }
 
-#education , #skills  {
-margin-bottom: 60px;  
+#education,
+#skills {
+  margin-bottom: 60px;
 }
 
 #code {
@@ -347,7 +352,7 @@ margin-bottom: 60px;
     margin-bottom: 35px;
   }
 
-   #skills {
+  #skills {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -355,7 +360,8 @@ margin-bottom: 60px;
     margin-bottom: 35px;
   }
 
-  #code , #languages {
+  #code,
+  #languages {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -364,12 +370,14 @@ margin-bottom: 60px;
   }
 }
 
-@media (max-width: 768px) { 
-  #education , .code-container  {
-    width: 80%;
-  } 
+@media (max-width: 768px) {
 
-  #skills  {
+  #education,
+  .code-container {
+    width: 80%;
+  }
+
+  #skills {
     width: 60%;
   }
 
@@ -388,12 +396,12 @@ margin-bottom: 60px;
 }
 
 .code {
-  font-size: 1.6rem;  
+  font-size: 1.6rem;
 }
 
 @media (max-width: 768px) {
   .code {
-   font-size: 1.2rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -415,7 +423,7 @@ margin-bottom: 60px;
   align-items: center;
 }
 
-.content-list li:not(:last-child){
+.content-list li:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -431,12 +439,12 @@ margin-bottom: 60px;
 }
 
 .skills-item {
-display: flex;
-flex-direction: column;
-min-height: 60px;
-justify-content: space-between;
-align-items: center;
-width: 70px;
+  display: flex;
+  flex-direction: column;
+  min-height: 60px;
+  justify-content: space-between;
+  align-items: center;
+  width: 70px;
 }
 
 .title {
@@ -473,7 +481,7 @@ width: 70px;
   height: 377px;
   width: 1px;
   margin-top: 98px;
-  background: #000000;    
+  background: #000000;
 }
 
 .line_3 {
@@ -512,14 +520,14 @@ width: 70px;
   opacity: 0.7;
 }
 
-.footer-container {  
-  padding: 0 15px;  
+.footer-container {
+  padding: 0 15px;
 }
 
 .footer-social {
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
   min-height: 100px;
 }
 
@@ -532,22 +540,21 @@ width: 70px;
 
 @media (max-width: 768px) {
   .footer-item {
-   min-width: 30%;
+    min-width: 30%;
   }
- }
- 
+}
+
 .footer img {
-  height: 50px;     
+  height: 50px;
 }
 
 @media (max-width: 768px) {
   .footer img {
-   width: 70px;
-   height: 35px;
+    width: 70px;
+    height: 35px;
   }
- }
- 
+}
+
 .footer p {
   color: #000;
 }
-
